// Ungkepan SN — Database ERD (DBML)
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key]
  name varchar [note: 'nama lengkap pembeli']
  email varchar [unique]
  phone varchar [note: 'nullable']
  birthdate date [note: 'nullable']
  gender varchar [note: 'male / female, nullable']
  password varchar [note: 'hash bcrypt, nullable — akun Google tanpa password']
  google_id varchar [note: 'nullable']
  avatar varchar [note: 'nullable, path uploads/...']
  created_at timestamp
  updated_at timestamp
}

Table user_addresses {
  id integer [primary key]
  user_id integer [not null]
  label varchar [note: 'Rumah / Kantor / Lainnya']
  name varchar [note: 'nama penerima, nullable']
  phone varchar [note: 'nullable']
  city varchar [note: 'nullable']
  address text
  postal_code varchar [note: 'nullable']
  is_default boolean [note: '0/1, maksimal satu default per user']
  created_at timestamp
  updated_at timestamp
}

Table admins {
  id integer [primary key]
  username varchar [unique]
  password varchar [note: 'hash bcrypt']
  created_at timestamp
}

Table categories {
  id integer [primary key]
  name varchar
  slug varchar
  icon varchar
  image varchar
  created_at timestamp
}

Table products {
  id integer [primary key]
  category_id integer [not null]
  name varchar
  price integer [note: 'dalam Rupiah']
  image varchar
  description text [note: 'nullable']
  weight varchar
  stock integer
  is_featured boolean [note: '0 atau 1']
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id integer [primary key]
  order_id integer [not null]
  product_id integer [not null]
  product_name varchar [note: 'Snapshot saat order dibuat']
  product_price integer [note: 'Harga snapshot']
  quantity integer
}

Table orders {
  id integer [primary key]
  order_code varchar [note: 'unik, format WM-XXXXXX']
  customer_name varchar
  phone varchar
  address text
  city varchar
  notes text
  shipping_method varchar
  payment_method varchar
  total integer
  status varchar [note: 'pending/processed/shipped/completed']
  created_at timestamp
}

Table reviews {
  id integer [primary key]
  product_id integer
  name varchar
  rating integer [note: 'skala 1-5']
  review text
  is_approved boolean [note: '0 = belum tampil, 1 = tampil']
  created_at timestamp
}

Table site_content {
  id integer [primary key]
  page varchar [note: 'about, contact, hero, footer, dst']
  content json
  updated_at timestamp
}

Table payment_config {
  id integer [primary key]
  method varchar [note: 'transfer / e-wallet / qris / cod']
  label varchar
  account_name varchar
  account_number varchar
  bank_name varchar
  qris_image varchar
  logo text
  is_active boolean
  sort_order integer
  created_at timestamp
}

Ref: user_addresses.user_id > users.id // one-to-many, cascade delete
Ref: products.category_id ?> categories.id // one-to-many
Ref: order_items.order_id ?> orders.id // snapshot
Ref: order_items.product_id ?> products.id
Ref: reviews.product_id ?> products.id // nullable

Records users(id, name, email, phone, gender) {
  1, 'Adham Baarigh', 'baarighadham0@gmail.com', '085895006642', 'male'
}

Records user_addresses(id, user_id, label, is_default) {
  1, 1, 'Rumah', 1
}

Records admins(id, username) {
  1, 'admin'
}

Records categories(id, name, slug, icon) {
  1, 'Frozen Food', 'frozen-food', 'Snowflake'
  2, 'Ungkepan', 'ungkepan', 'BowlFood'
  3, 'Minuman', 'minuman', 'Coffee'
}

Records products(id, category_id, name, price, stock) {
  1, 2, 'Paru', 55000, 19
  7, 2, 'Olor', 5000, 12
  13, 2, 'Usus', 55000, 20
  14, 2, 'Ayam goreng lengkuas', 55000, 20
  15, 2, 'Daging', 55000, 21
  16, 2, 'Otak', 550000, 20
  17, 1, 'Rolade', 22500, 20
  18, 1, 'Pepes', 20000, 19
}

Records orders(id, order_code, customer_name, total, status) {
  4, 'WM-TI3IOC', '3_Adham Baarigh Abdi Rachman', 50000, 'completed'
  6, 'WM-TI3KC1', '3_Adham Baarigh Abdi Rachman', 55000, 'completed'
  8, 'WM-TI7IAN', '03_Adham Baarigh Abdi Rachman', 24000, 'completed'
  9, 'WM-TI7RSP', '03_Adham Baarigh Abdi Rachman', 55000, 'completed'
  10, 'WM-TI7YO1', '03_Adham Baarigh Abdi Rachman', 20000, 'completed'
}

Records order_items(id, order_id, product_id, product_name, quantity) {
  6, 6, 1, 'Kue Nastar Keju', 1
  7, 7, 1, 'Kue Nastar Keju', 1
  9, 9, 1, 'Kue Nastar Keju', 1
  10, 10, 18, 'Pepes', 1
}

Records reviews(id, product_id, name, rating) {
  1, null, 'Budi', 5
  2, null, 'Sari', 4
}

Records site_content(id, page) {
  1, 'about'
  2, 'contact'
  3, 'shipping'
  4, 'shipping_methods'
  5, 'hero'
  20, 'footer'
}

Records payment_config(id, method, is_active) {
  1, 'transfer', 1
  2, 'transfer', 1
  3, 'transfer', 1
  4, 'e-wallet', 1
  6, 'e-wallet', 1
  7, 'qris', 1
  8, 'cod', 1
}